--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000" />
-    <meta name="description" content="Web site created using Locofy" />
+    <meta name="description" content="Web site created using determination" />
     <title>FINALL</title>
   </head>
   <body>
